--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<!-- Your code here -->
 		<tbody>
 			<tr>
-				<th>
+				<td>
 					<table>
 						<thead>
 							<tr>
@@ -26,13 +26,13 @@
 						</thead>
 						<tbody>
 							<tr>
-								<th>abc</th>
-								<th>def</th>
+								<td>abc</td>
+								<td>def</td>
 							</tr>
 						</tbody>
 					</table>
-				</th>
-				<th>
+				</td>
+				<td>
 					<table>
 						<thead>
 							<tr>
@@ -41,20 +41,20 @@
 						</thead>
 						<tbody>
 							<tr>
-								<th>
+								<td>
 									<ul>
 										<li>List item</li>
 										<li>List item</li>
 										<li>List item</li>
 									</ul>
-								</th>
+								</td>
 							</tr>
 						</tbody>
 					</table>
-				</th>
+				</td>
 			</tr>
 			<tr>
-				<th>
+				<td>
 					<table>
 						<thead>
 							<tr>
@@ -63,13 +63,13 @@
 						</thead>
 						<tbody>
 							<tr>
-								<th>Nested Table</th>
-								<th>Demo Continued</th>
+								<td>Nested Table</td>
+								<td>Demo Continued</td>
 							</tr>
 						</tbody>
 					</table>
-				</th>
-				<th>
+				</td>
+				<td>
 					<table>
 						<thead>
 							<tr>
@@ -78,11 +78,11 @@
 						</thead>
 						<tbody>
 							<tr>
-								<th style="color: white; background-color: black;">HTML</th>
+								<td style="color: white; background-color: black;">HTML</th>
 							</tr>
 						</tbody>
 					</table>
-				</th>
+				</td>
 			</tr>
 		</tbody>
 	</table>
