--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 					<table>
 						<thead>
 							<tr>
-								<th colspan="2">Nested table 2</th>
+								<th colspan="2">Nested Table 2</th>
 							</tr>
 							<tr>
 								<th>Column 1</th>
